<resources>
    <string name="app_name">Film Catalog</string>
    <string name="top_movie_db">Top movie database</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="top_popular_movies">Top Popular Movies</string>
    <string name="fav_fragment_title">My library</string>
    <string name="watch_list">Watch later list</string>
    <string name="favorites_list">Favorites movies list</string>
    <string name="login_hint">Enter login</string>
    <string name="password_hint">Enter password</string>
    <string name="login_button">Login into account</string>
    <string name="rate_film">Rate</string>
    <string name="share_film">Share</string>
    <string name="add_to_watch_later">Watch later</string>
    <string name="add_to_fav">Favorite</string>
    <string name="more_options">More</string>
    <string name="watch">Watch</string>
    <string name="reviews">Reviews</string>
    <string name="recommendations">Recommendations</string>
    <string name="mainPage">Main</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="loginLayoutDescribesToLoginTMDB">To open all functions authorise via the TMDB account \n You will be redirected to browser</string>
    <string name="loginTMDBButton">Log in TMDB</string>
    <string name="login_into_account">Log in with your TMDB account</string>
    <string name="watch_now">Watch now</string>
    <string name="watch_later">Watch later</string>
    <string name="favorites">Favorites</string>
    <string name="watched">Watched</string>

    <string name="history">History</string>

    <string name="show_more">Show more </string>
    <string name="favorite_fragment_register_to_get_access">Register to get access to make lists of films</string>
    <string name="error_in_loading_collections">Error in loading collections</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collections_are_empty">Your collections are empty</string>
    <string name="viewed_item">Viewed</string>
    <string name="added_to_viewed">Added to viewed</string>
    <string name="deleted_from_viewed">Deleted from viewed</string>
    <string name="error_while_checking_status">Error while checking status</string>
    <string name="error_loading_film_details">Error loading film details</string>
    <string name="error_loading_reviews">Error loading film reviews</string>
    <string name="error_loading_recommendations">Error loading recommendations</string>
    <string name="error_loading_collections">Error loading collections</string>
    <string name="successfully">Successfully</string>
    <string name="added_to">Added to</string>
    <string name="deleted_from">Deleted from</string>

</resources>