<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/mainPage"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/rate"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>